kubernetes/microservices/templates/course-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  namespace: default
  name: course-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: course-service

  template:
    metadata:
      labels:
        app: course-service

    spec:
      containers:
        - name: course-container
          image: 288673275952.dkr.ecr.us-east-2.amazonaws.com/course-service:v10

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
