kubernetes/microservices/templates/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment

spec:
  replicas: 2

  strategy:
    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: frontend-service

  template:
    metadata:
      labels:
        app: frontend-service

    spec:
      containers:
      - name: frontend-container

        image:  288673275952.dkr.ecr.us-east-2.amazonaws.com/frontend-service:v5

        ports:
        - containerPort: 80
