kubernetes/microservices/templates/student-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  namespace: default
  name: student-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: student-service

  template:
    metadata:
      labels:
        app: student-service

    spec:
      containers:
      - name: student-container

        image: 288673275952.dkr.ecr.us-east-2.amazonaws.com/student-service:latest

        ports:
        - containerPort: 3000
